fix(clinical): the snapshot drawer and the review queue require a hospital scope
Two live cross-tenant reads, both the same shape as the ones #735 and #739
close on the lab side, and one of them serving the very rows those PRs now
refuse.

GET /me/patients/{id}/snapshot built the whole record — allergies, diagnoses,
medications, vitals, labs, pending orders, notes, care team — from a
`readable = hospitalId == null ? null : ...` whose null branch made every
section read patient-wide, skipped the registration check and skipped the
disclosure row, because `account()` no-ops on a null acting hospital. Its
pending-orders block called `labOrderRepository.findByPatient_Id`, the finder
#739 abandons. The controller resolves the scope with `.orElse(null)`, so an
ordinary clinician whose scope fails to resolve lands there too, not only a
super-admin.

GET /me/results/review-queue read `findByOrderingStaff_Id` with no hospital
scope at all. A user has exactly ONE Staff row platform-wide (uq_staff_user,
plus V8's uq_staff_user_id), and nothing binds the ordering staff to the
order's hospital, so that finder unions every hospital the clinician is — or
once was — assigned to.

Both refuse instead of widening, with the key the sibling reads throw, and the
snapshot's patient-wide fallbacks are removed rather than left unreachable.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>