@@ -94,21 +94,34 @@ class PatientSnapshotServiceImplTest {
         return p;
     }
 
+    /**
+     * The hospital the caller is acting at. getSnapshot now refuses a null
+     * scope outright, so every test below reads as a scoped caller and the
+     * readable set is the acting hospital alone unless the test widens it.
+     */
+    private static final UUID HOSPITAL_ID = UUID.randomUUID();
+    private static final Set<UUID> READABLE = Set.of(HOSPITAL_ID);
+
     private void givenPatient(UUID patientId, Patient patient) {
         when(patientRepository.findByIdUnscoped(patientId)).thenReturn(Optional.of(patient));
+        // Lenient: the patient-not-found and refusal tests never get this far,
+        // and the cross-hospital test supplies its own wider readable set.
+        lenient().when(patient.isRegisteredInHospital(HOSPITAL_ID)).thenReturn(true);
+        lenient().when(recordAccessPolicy.readableHospitalIds(any(), eq(patientId), eq(HOSPITAL_ID)))
+                .thenReturn(READABLE);
     }
 
     private void stubEmptySubQueries(UUID patientId) {
         when(patientAllergyRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
         when(patientDiagnosisRepository.findByPatient_IdAndStatusOrderByDiagnosedAtDesc(patientId, "ACTIVE"))
                 .thenReturn(Collections.emptyList());
-        when(patientVitalSignRepository.findByPatient_IdOrderByRecordedAtDesc(eq(patientId), any()))
+        when(patientVitalSignRepository.findByPatient_IdAndHospital_IdInOrderByRecordedAtDesc(eq(patientId), eq(READABLE), any()))
                 .thenReturn(Collections.emptyList());
-        when(prescriptionRepository.findByPatient_Id(eq(patientId), any()))
+        when(prescriptionRepository.findByPatient_IdAndHospital_IdIn(eq(patientId), eq(READABLE), any()))
                 .thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(labOrderRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(labResultRepository.findByLabOrder_Patient_Id(eq(patientId), any())).thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(encounterRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
+        when(labOrderRepository.findByPatient_IdAndHospital_IdIn(patientId, READABLE)).thenReturn(Collections.emptyList());
+        when(labResultRepository.findByLabOrder_Patient_IdAndLabOrder_Hospital_IdIn(eq(patientId), eq(READABLE), any())).thenReturn(Collections.emptyList());
+        when(encounterRepository.findByPatient_IdAndHospital_IdInOrderByEncounterDateDesc(patientId, READABLE)).thenReturn(Collections.emptyList());
     }
 
     // ========== getSnapshot() ==========
@@ -118,7 +131,7 @@ class PatientSnapshotServiceImplTest {
         UUID patientId = UUID.randomUUID();
         when(patientRepository.findByIdUnscoped(patientId)).thenReturn(Optional.empty());
 
-        assertThrows(ResourceNotFoundException.class, () -> service.getSnapshot(patientId, null));
+        assertThrows(ResourceNotFoundException.class, () -> service.getSnapshot(patientId, HOSPITAL_ID));
     }
 
     @Test
@@ -128,7 +141,7 @@ class PatientSnapshotServiceImplTest {
         givenPatient(patientId, patient);
         stubEmptySubQueries(patientId);
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertNotNull(result);
         assertEquals(patientId, result.getPatientId());
@@ -148,15 +161,15 @@ class PatientSnapshotServiceImplTest {
         when(allergy.getAllergenDisplay()).thenReturn("Penicillin");
 
         when(patientAllergyRepository.findByPatient_Id(patientId)).thenReturn(List.of(allergy));
-        when(patientVitalSignRepository.findByPatient_IdOrderByRecordedAtDesc(eq(patientId), any()))
+        when(patientVitalSignRepository.findByPatient_IdAndHospital_IdInOrderByRecordedAtDesc(eq(patientId), eq(READABLE), any()))
                 .thenReturn(Collections.emptyList());
-        when(prescriptionRepository.findByPatient_Id(eq(patientId), any()))
+        when(prescriptionRepository.findByPatient_IdAndHospital_IdIn(eq(patientId), eq(READABLE), any()))
                 .thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(labOrderRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(labResultRepository.findByLabOrder_Patient_Id(eq(patientId), any())).thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(encounterRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
+        when(labOrderRepository.findByPatient_IdAndHospital_IdIn(patientId, READABLE)).thenReturn(Collections.emptyList());
+        when(labResultRepository.findByLabOrder_Patient_IdAndLabOrder_Hospital_IdIn(eq(patientId), eq(READABLE), any())).thenReturn(Collections.emptyList());
+        when(encounterRepository.findByPatient_IdAndHospital_IdInOrderByEncounterDateDesc(patientId, READABLE)).thenReturn(Collections.emptyList());
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertFalse(result.getAllergies().isEmpty());
         assertTrue(result.getAllergies().contains("Penicillin"));
@@ -172,15 +185,15 @@ class PatientSnapshotServiceImplTest {
         PatientAllergy allergy = mock(PatientAllergy.class);
         when(allergy.getAllergenDisplay()).thenReturn("Penicillin");
         when(patientAllergyRepository.findByPatient_Id(patientId)).thenReturn(List.of(allergy));
-        when(patientVitalSignRepository.findByPatient_IdOrderByRecordedAtDesc(eq(patientId), any()))
+        when(patientVitalSignRepository.findByPatient_IdAndHospital_IdInOrderByRecordedAtDesc(eq(patientId), eq(READABLE), any()))
                 .thenReturn(Collections.emptyList());
-        when(prescriptionRepository.findByPatient_Id(eq(patientId), any()))
+        when(prescriptionRepository.findByPatient_IdAndHospital_IdIn(eq(patientId), eq(READABLE), any()))
                 .thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(labOrderRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(labResultRepository.findByLabOrder_Patient_Id(eq(patientId), any())).thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(encounterRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
+        when(labOrderRepository.findByPatient_IdAndHospital_IdIn(patientId, READABLE)).thenReturn(Collections.emptyList());
+        when(labResultRepository.findByLabOrder_Patient_IdAndLabOrder_Hospital_IdIn(eq(patientId), eq(READABLE), any())).thenReturn(Collections.emptyList());
+        when(encounterRepository.findByPatient_IdAndHospital_IdInOrderByEncounterDateDesc(patientId, READABLE)).thenReturn(Collections.emptyList());
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertEquals(List.of("Penicillin"), result.getAllergies());
         verify(patient, never()).getAllergies();
@@ -194,15 +207,15 @@ class PatientSnapshotServiceImplTest {
         givenPatient(patientId, patient);
 
         when(patientAllergyRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(patientVitalSignRepository.findByPatient_IdOrderByRecordedAtDesc(eq(patientId), any()))
+        when(patientVitalSignRepository.findByPatient_IdAndHospital_IdInOrderByRecordedAtDesc(eq(patientId), eq(READABLE), any()))
                 .thenReturn(Collections.emptyList());
-        when(prescriptionRepository.findByPatient_Id(eq(patientId), any()))
+        when(prescriptionRepository.findByPatient_IdAndHospital_IdIn(eq(patientId), eq(READABLE), any()))
                 .thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(labOrderRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(labResultRepository.findByLabOrder_Patient_Id(eq(patientId), any())).thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(encounterRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
+        when(labOrderRepository.findByPatient_IdAndHospital_IdIn(patientId, READABLE)).thenReturn(Collections.emptyList());
+        when(labResultRepository.findByLabOrder_Patient_IdAndLabOrder_Hospital_IdIn(eq(patientId), eq(READABLE), any())).thenReturn(Collections.emptyList());
+        when(encounterRepository.findByPatient_IdAndHospital_IdInOrderByEncounterDateDesc(patientId, READABLE)).thenReturn(Collections.emptyList());
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertTrue(result.getAllergies().contains("Sulfa drugs"));
     }
@@ -215,7 +228,7 @@ class PatientSnapshotServiceImplTest {
         givenPatient(patientId, patient);
         stubEmptySubQueries(patientId);
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertEquals(3, result.getActiveDiagnoses().size());
         assertTrue(result.getActiveDiagnoses().contains("Diabetes"));
@@ -235,15 +248,15 @@ class PatientSnapshotServiceImplTest {
         when(rx.getFrequency()).thenReturn("BID");
 
         when(patientAllergyRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(patientVitalSignRepository.findByPatient_IdOrderByRecordedAtDesc(eq(patientId), any()))
+        when(patientVitalSignRepository.findByPatient_IdAndHospital_IdInOrderByRecordedAtDesc(eq(patientId), eq(READABLE), any()))
                 .thenReturn(Collections.emptyList());
-        when(prescriptionRepository.findByPatient_Id(eq(patientId), any()))
+        when(prescriptionRepository.findByPatient_IdAndHospital_IdIn(eq(patientId), eq(READABLE), any()))
                 .thenReturn(new PageImpl<>(List.of(rx)));
-        when(labOrderRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(labResultRepository.findByLabOrder_Patient_Id(eq(patientId), any())).thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(encounterRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
+        when(labOrderRepository.findByPatient_IdAndHospital_IdIn(patientId, READABLE)).thenReturn(Collections.emptyList());
+        when(labResultRepository.findByLabOrder_Patient_IdAndLabOrder_Hospital_IdIn(eq(patientId), eq(READABLE), any())).thenReturn(Collections.emptyList());
+        when(encounterRepository.findByPatient_IdAndHospital_IdInOrderByEncounterDateDesc(patientId, READABLE)).thenReturn(Collections.emptyList());
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertEquals(1, result.getActiveMedications().size());
         PatientSnapshotDTO.MedicationItem med = result.getActiveMedications().get(0);
@@ -267,15 +280,15 @@ class PatientSnapshotServiceImplTest {
         when(vital.getRecordedAt()).thenReturn(LocalDateTime.of(2026, 3, 14, 10, 30));
 
         when(patientAllergyRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(patientVitalSignRepository.findByPatient_IdOrderByRecordedAtDesc(eq(patientId), any()))
+        when(patientVitalSignRepository.findByPatient_IdAndHospital_IdInOrderByRecordedAtDesc(eq(patientId), eq(READABLE), any()))
                 .thenReturn(List.of(vital));
-        when(prescriptionRepository.findByPatient_Id(eq(patientId), any()))
+        when(prescriptionRepository.findByPatient_IdAndHospital_IdIn(eq(patientId), eq(READABLE), any()))
                 .thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(labOrderRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(labResultRepository.findByLabOrder_Patient_Id(eq(patientId), any())).thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(encounterRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
+        when(labOrderRepository.findByPatient_IdAndHospital_IdIn(patientId, READABLE)).thenReturn(Collections.emptyList());
+        when(labResultRepository.findByLabOrder_Patient_IdAndLabOrder_Hospital_IdIn(eq(patientId), eq(READABLE), any())).thenReturn(Collections.emptyList());
+        when(encounterRepository.findByPatient_IdAndHospital_IdInOrderByEncounterDateDesc(patientId, READABLE)).thenReturn(Collections.emptyList());
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertFalse(result.getRecentVitals().isEmpty());
         PatientSnapshotDTO.VitalItem v = result.getRecentVitals().get(0);
@@ -307,15 +320,15 @@ class PatientSnapshotServiceImplTest {
         when(labResult.getResultDate()).thenReturn(LocalDateTime.of(2026, 3, 14, 9, 0));
 
         when(patientAllergyRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(patientVitalSignRepository.findByPatient_IdOrderByRecordedAtDesc(eq(patientId), any()))
+        when(patientVitalSignRepository.findByPatient_IdAndHospital_IdInOrderByRecordedAtDesc(eq(patientId), eq(READABLE), any()))
                 .thenReturn(Collections.emptyList());
-        when(prescriptionRepository.findByPatient_Id(eq(patientId), any()))
+        when(prescriptionRepository.findByPatient_IdAndHospital_IdIn(eq(patientId), eq(READABLE), any()))
                 .thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(labOrderRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(labResultRepository.findByLabOrder_Patient_Id(eq(patientId), any())).thenReturn(new PageImpl<>(List.of(labResult)));
-        when(encounterRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
+        when(labOrderRepository.findByPatient_IdAndHospital_IdIn(patientId, READABLE)).thenReturn(Collections.emptyList());
+        when(labResultRepository.findByLabOrder_Patient_IdAndLabOrder_Hospital_IdIn(eq(patientId), eq(READABLE), any())).thenReturn(List.of(labResult));
+        when(encounterRepository.findByPatient_IdAndHospital_IdInOrderByEncounterDateDesc(patientId, READABLE)).thenReturn(Collections.emptyList());
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertEquals(1, result.getLatestLabs().size());
         PatientSnapshotDTO.LabItem lab = result.getLatestLabs().get(0);
@@ -340,15 +353,15 @@ class PatientSnapshotServiceImplTest {
         when(labResult.getAbnormalFlag()).thenReturn(com.example.hms.enums.AbnormalFlag.ABNORMAL_HIGH);
 
         when(patientAllergyRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(patientVitalSignRepository.findByPatient_IdOrderByRecordedAtDesc(eq(patientId), any()))
+        when(patientVitalSignRepository.findByPatient_IdAndHospital_IdInOrderByRecordedAtDesc(eq(patientId), eq(READABLE), any()))
                 .thenReturn(Collections.emptyList());
-        when(prescriptionRepository.findByPatient_Id(eq(patientId), any()))
+        when(prescriptionRepository.findByPatient_IdAndHospital_IdIn(eq(patientId), eq(READABLE), any()))
                 .thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(labOrderRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(labResultRepository.findByLabOrder_Patient_Id(eq(patientId), any())).thenReturn(new PageImpl<>(List.of(labResult)));
-        when(encounterRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
+        when(labOrderRepository.findByPatient_IdAndHospital_IdIn(patientId, READABLE)).thenReturn(Collections.emptyList());
+        when(labResultRepository.findByLabOrder_Patient_IdAndLabOrder_Hospital_IdIn(eq(patientId), eq(READABLE), any())).thenReturn(List.of(labResult));
+        when(encounterRepository.findByPatient_IdAndHospital_IdInOrderByEncounterDateDesc(patientId, READABLE)).thenReturn(Collections.emptyList());
 
-        PatientSnapshotDTO.LabItem lab = service.getSnapshot(patientId, null).getLatestLabs().get(0);
+        PatientSnapshotDTO.LabItem lab = service.getSnapshot(patientId, HOSPITAL_ID).getLatestLabs().get(0);
 
         // The drawer colours on the literal ABNORMAL; the arrow is a separate field.
         assertEquals("ABNORMAL", lab.getFlag());
@@ -370,15 +383,15 @@ class PatientSnapshotServiceImplTest {
         when(pendingOrder.getOrderDatetime()).thenReturn(LocalDateTime.of(2026, 3, 14, 8, 0));
 
         when(patientAllergyRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(patientVitalSignRepository.findByPatient_IdOrderByRecordedAtDesc(eq(patientId), any()))
+        when(patientVitalSignRepository.findByPatient_IdAndHospital_IdInOrderByRecordedAtDesc(eq(patientId), eq(READABLE), any()))
                 .thenReturn(Collections.emptyList());
-        when(prescriptionRepository.findByPatient_Id(eq(patientId), any()))
+        when(prescriptionRepository.findByPatient_IdAndHospital_IdIn(eq(patientId), eq(READABLE), any()))
                 .thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(labOrderRepository.findByPatient_Id(patientId)).thenReturn(List.of(pendingOrder));
-        when(labResultRepository.findByLabOrder_Patient_Id(eq(patientId), any())).thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(encounterRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
+        when(labOrderRepository.findByPatient_IdAndHospital_IdIn(patientId, READABLE)).thenReturn(List.of(pendingOrder));
+        when(labResultRepository.findByLabOrder_Patient_IdAndLabOrder_Hospital_IdIn(eq(patientId), eq(READABLE), any())).thenReturn(Collections.emptyList());
+        when(encounterRepository.findByPatient_IdAndHospital_IdInOrderByEncounterDateDesc(patientId, READABLE)).thenReturn(Collections.emptyList());
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertEquals(1, result.getPendingOrders().size());
         PatientSnapshotDTO.OrderItem order = result.getPendingOrders().get(0);
@@ -396,15 +409,15 @@ class PatientSnapshotServiceImplTest {
         when(completedOrder.getStatus()).thenReturn(LabOrderStatus.COMPLETED);
 
         when(patientAllergyRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(patientVitalSignRepository.findByPatient_IdOrderByRecordedAtDesc(eq(patientId), any()))
+        when(patientVitalSignRepository.findByPatient_IdAndHospital_IdInOrderByRecordedAtDesc(eq(patientId), eq(READABLE), any()))
                 .thenReturn(Collections.emptyList());
-        when(prescriptionRepository.findByPatient_Id(eq(patientId), any()))
+        when(prescriptionRepository.findByPatient_IdAndHospital_IdIn(eq(patientId), eq(READABLE), any()))
                 .thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(labOrderRepository.findByPatient_Id(patientId)).thenReturn(List.of(completedOrder));
-        when(labResultRepository.findByLabOrder_Patient_Id(eq(patientId), any())).thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(encounterRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
+        when(labOrderRepository.findByPatient_IdAndHospital_IdIn(patientId, READABLE)).thenReturn(List.of(completedOrder));
+        when(labResultRepository.findByLabOrder_Patient_IdAndLabOrder_Hospital_IdIn(eq(patientId), eq(READABLE), any())).thenReturn(Collections.emptyList());
+        when(encounterRepository.findByPatient_IdAndHospital_IdInOrderByEncounterDateDesc(patientId, READABLE)).thenReturn(Collections.emptyList());
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertTrue(result.getPendingOrders().isEmpty());
     }
@@ -423,15 +436,15 @@ class PatientSnapshotServiceImplTest {
         when(enc.getStaff()).thenReturn(doctor);
 
         when(patientAllergyRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(patientVitalSignRepository.findByPatient_IdOrderByRecordedAtDesc(eq(patientId), any()))
+        when(patientVitalSignRepository.findByPatient_IdAndHospital_IdInOrderByRecordedAtDesc(eq(patientId), eq(READABLE), any()))
                 .thenReturn(Collections.emptyList());
-        when(prescriptionRepository.findByPatient_Id(eq(patientId), any()))
+        when(prescriptionRepository.findByPatient_IdAndHospital_IdIn(eq(patientId), eq(READABLE), any()))
                 .thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(labOrderRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(labResultRepository.findByLabOrder_Patient_Id(eq(patientId), any())).thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(encounterRepository.findByPatient_Id(patientId)).thenReturn(List.of(enc));
+        when(labOrderRepository.findByPatient_IdAndHospital_IdIn(patientId, READABLE)).thenReturn(Collections.emptyList());
+        when(labResultRepository.findByLabOrder_Patient_IdAndLabOrder_Hospital_IdIn(eq(patientId), eq(READABLE), any())).thenReturn(Collections.emptyList());
+        when(encounterRepository.findByPatient_IdAndHospital_IdInOrderByEncounterDateDesc(patientId, READABLE)).thenReturn(List.of(enc));
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertFalse(result.getCareTeam().isEmpty());
         PatientSnapshotDTO.CareTeamMember member = result.getCareTeam().get(0);
@@ -446,7 +459,7 @@ class PatientSnapshotServiceImplTest {
         givenPatient(patientId, patient);
         stubEmptySubQueries(patientId);
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertNotNull(result.getRecentNotes());
         assertTrue(result.getRecentNotes().isEmpty());
@@ -459,15 +472,15 @@ class PatientSnapshotServiceImplTest {
         givenPatient(patientId, patient);
 
         when(patientAllergyRepository.findByPatient_Id(patientId)).thenThrow(new RuntimeException("DB error"));
-        when(patientVitalSignRepository.findByPatient_IdOrderByRecordedAtDesc(eq(patientId), any()))
+        when(patientVitalSignRepository.findByPatient_IdAndHospital_IdInOrderByRecordedAtDesc(eq(patientId), eq(READABLE), any()))
                 .thenReturn(Collections.emptyList());
-        when(prescriptionRepository.findByPatient_Id(eq(patientId), any()))
+        when(prescriptionRepository.findByPatient_IdAndHospital_IdIn(eq(patientId), eq(READABLE), any()))
                 .thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(labOrderRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(labResultRepository.findByLabOrder_Patient_Id(eq(patientId), any())).thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(encounterRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
+        when(labOrderRepository.findByPatient_IdAndHospital_IdIn(patientId, READABLE)).thenReturn(Collections.emptyList());
+        when(labResultRepository.findByLabOrder_Patient_IdAndLabOrder_Hospital_IdIn(eq(patientId), eq(READABLE), any())).thenReturn(Collections.emptyList());
+        when(encounterRepository.findByPatient_IdAndHospital_IdInOrderByEncounterDateDesc(patientId, READABLE)).thenReturn(Collections.emptyList());
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertNotNull(result);
         assertEquals("Alice Wong", result.getName());
@@ -481,7 +494,7 @@ class PatientSnapshotServiceImplTest {
         givenPatient(patientId, patient);
         stubEmptySubQueries(patientId);
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertEquals(0, result.getAge());
     }
@@ -495,15 +508,15 @@ class PatientSnapshotServiceImplTest {
         givenPatient(patientId, patient);
 
         when(patientAllergyRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(patientVitalSignRepository.findByPatient_IdOrderByRecordedAtDesc(eq(patientId), any()))
+        when(patientVitalSignRepository.findByPatient_IdAndHospital_IdInOrderByRecordedAtDesc(eq(patientId), eq(READABLE), any()))
                 .thenReturn(Collections.emptyList());
-        when(prescriptionRepository.findByPatient_Id(eq(patientId), any()))
+        when(prescriptionRepository.findByPatient_IdAndHospital_IdIn(eq(patientId), eq(READABLE), any()))
                 .thenThrow(new RuntimeException("DB error"));
-        when(labOrderRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(labResultRepository.findByLabOrder_Patient_Id(eq(patientId), any())).thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(encounterRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
+        when(labOrderRepository.findByPatient_IdAndHospital_IdIn(patientId, READABLE)).thenReturn(Collections.emptyList());
+        when(labResultRepository.findByLabOrder_Patient_IdAndLabOrder_Hospital_IdIn(eq(patientId), eq(READABLE), any())).thenReturn(Collections.emptyList());
+        when(encounterRepository.findByPatient_IdAndHospital_IdInOrderByEncounterDateDesc(patientId, READABLE)).thenReturn(Collections.emptyList());
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertNotNull(result);
         assertTrue(result.getActiveMedications().isEmpty());
@@ -516,15 +529,15 @@ class PatientSnapshotServiceImplTest {
         givenPatient(patientId, patient);
 
         when(patientAllergyRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(patientVitalSignRepository.findByPatient_IdOrderByRecordedAtDesc(eq(patientId), any()))
+        when(patientVitalSignRepository.findByPatient_IdAndHospital_IdInOrderByRecordedAtDesc(eq(patientId), eq(READABLE), any()))
                 .thenThrow(new RuntimeException("DB error"));
-        when(prescriptionRepository.findByPatient_Id(eq(patientId), any()))
+        when(prescriptionRepository.findByPatient_IdAndHospital_IdIn(eq(patientId), eq(READABLE), any()))
                 .thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(labOrderRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(labResultRepository.findByLabOrder_Patient_Id(eq(patientId), any())).thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(encounterRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
+        when(labOrderRepository.findByPatient_IdAndHospital_IdIn(patientId, READABLE)).thenReturn(Collections.emptyList());
+        when(labResultRepository.findByLabOrder_Patient_IdAndLabOrder_Hospital_IdIn(eq(patientId), eq(READABLE), any())).thenReturn(Collections.emptyList());
+        when(encounterRepository.findByPatient_IdAndHospital_IdInOrderByEncounterDateDesc(patientId, READABLE)).thenReturn(Collections.emptyList());
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertNotNull(result);
         assertTrue(result.getRecentVitals().isEmpty());
@@ -537,15 +550,15 @@ class PatientSnapshotServiceImplTest {
         givenPatient(patientId, patient);
 
         when(patientAllergyRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(patientVitalSignRepository.findByPatient_IdOrderByRecordedAtDesc(eq(patientId), any()))
+        when(patientVitalSignRepository.findByPatient_IdAndHospital_IdInOrderByRecordedAtDesc(eq(patientId), eq(READABLE), any()))
                 .thenReturn(Collections.emptyList());
-        when(prescriptionRepository.findByPatient_Id(eq(patientId), any()))
+        when(prescriptionRepository.findByPatient_IdAndHospital_IdIn(eq(patientId), eq(READABLE), any()))
                 .thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(labOrderRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(labResultRepository.findByLabOrder_Patient_Id(eq(patientId), any())).thenThrow(new RuntimeException("DB error"));
-        when(encounterRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
+        when(labOrderRepository.findByPatient_IdAndHospital_IdIn(patientId, READABLE)).thenReturn(Collections.emptyList());
+        when(labResultRepository.findByLabOrder_Patient_IdAndLabOrder_Hospital_IdIn(eq(patientId), eq(READABLE), any())).thenThrow(new RuntimeException("DB error"));
+        when(encounterRepository.findByPatient_IdAndHospital_IdInOrderByEncounterDateDesc(patientId, READABLE)).thenReturn(Collections.emptyList());
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertNotNull(result);
         assertTrue(result.getLatestLabs().isEmpty());
@@ -558,15 +571,15 @@ class PatientSnapshotServiceImplTest {
         givenPatient(patientId, patient);
 
         when(patientAllergyRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(patientVitalSignRepository.findByPatient_IdOrderByRecordedAtDesc(eq(patientId), any()))
+        when(patientVitalSignRepository.findByPatient_IdAndHospital_IdInOrderByRecordedAtDesc(eq(patientId), eq(READABLE), any()))
                 .thenReturn(Collections.emptyList());
-        when(prescriptionRepository.findByPatient_Id(eq(patientId), any()))
+        when(prescriptionRepository.findByPatient_IdAndHospital_IdIn(eq(patientId), eq(READABLE), any()))
                 .thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(labOrderRepository.findByPatient_Id(patientId)).thenThrow(new RuntimeException("DB error"));
-        when(labResultRepository.findByLabOrder_Patient_Id(eq(patientId), any())).thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(encounterRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
+        when(labOrderRepository.findByPatient_IdAndHospital_IdIn(patientId, READABLE)).thenThrow(new RuntimeException("DB error"));
+        when(labResultRepository.findByLabOrder_Patient_IdAndLabOrder_Hospital_IdIn(eq(patientId), eq(READABLE), any())).thenReturn(Collections.emptyList());
+        when(encounterRepository.findByPatient_IdAndHospital_IdInOrderByEncounterDateDesc(patientId, READABLE)).thenReturn(Collections.emptyList());
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertNotNull(result);
         assertTrue(result.getPendingOrders().isEmpty());
@@ -579,15 +592,15 @@ class PatientSnapshotServiceImplTest {
         givenPatient(patientId, patient);
 
         when(patientAllergyRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(patientVitalSignRepository.findByPatient_IdOrderByRecordedAtDesc(eq(patientId), any()))
+        when(patientVitalSignRepository.findByPatient_IdAndHospital_IdInOrderByRecordedAtDesc(eq(patientId), eq(READABLE), any()))
                 .thenReturn(Collections.emptyList());
-        when(prescriptionRepository.findByPatient_Id(eq(patientId), any()))
+        when(prescriptionRepository.findByPatient_IdAndHospital_IdIn(eq(patientId), eq(READABLE), any()))
                 .thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(labOrderRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(labResultRepository.findByLabOrder_Patient_Id(eq(patientId), any())).thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(encounterRepository.findByPatient_Id(patientId)).thenThrow(new RuntimeException("DB error"));
+        when(labOrderRepository.findByPatient_IdAndHospital_IdIn(patientId, READABLE)).thenReturn(Collections.emptyList());
+        when(labResultRepository.findByLabOrder_Patient_IdAndLabOrder_Hospital_IdIn(eq(patientId), eq(READABLE), any())).thenReturn(Collections.emptyList());
+        when(encounterRepository.findByPatient_IdAndHospital_IdInOrderByEncounterDateDesc(patientId, READABLE)).thenThrow(new RuntimeException("DB error"));
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertNotNull(result);
         assertTrue(result.getCareTeam().isEmpty());
@@ -608,15 +621,15 @@ class PatientSnapshotServiceImplTest {
         when(vital.getRecordedAt()).thenReturn(null);
 
         when(patientAllergyRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(patientVitalSignRepository.findByPatient_IdOrderByRecordedAtDesc(eq(patientId), any()))
+        when(patientVitalSignRepository.findByPatient_IdAndHospital_IdInOrderByRecordedAtDesc(eq(patientId), eq(READABLE), any()))
                 .thenReturn(List.of(vital));
-        when(prescriptionRepository.findByPatient_Id(eq(patientId), any()))
+        when(prescriptionRepository.findByPatient_IdAndHospital_IdIn(eq(patientId), eq(READABLE), any()))
                 .thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(labOrderRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(labResultRepository.findByLabOrder_Patient_Id(eq(patientId), any())).thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(encounterRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
+        when(labOrderRepository.findByPatient_IdAndHospital_IdIn(patientId, READABLE)).thenReturn(Collections.emptyList());
+        when(labResultRepository.findByLabOrder_Patient_IdAndLabOrder_Hospital_IdIn(eq(patientId), eq(READABLE), any())).thenReturn(Collections.emptyList());
+        when(encounterRepository.findByPatient_IdAndHospital_IdInOrderByEncounterDateDesc(patientId, READABLE)).thenReturn(Collections.emptyList());
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertEquals(1, result.getRecentVitals().size());
         PatientSnapshotDTO.VitalItem v = result.getRecentVitals().get(0);
@@ -643,15 +656,15 @@ class PatientSnapshotServiceImplTest {
         when(labResult.getResultDate()).thenReturn(null);
 
         when(patientAllergyRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(patientVitalSignRepository.findByPatient_IdOrderByRecordedAtDesc(eq(patientId), any()))
+        when(patientVitalSignRepository.findByPatient_IdAndHospital_IdInOrderByRecordedAtDesc(eq(patientId), eq(READABLE), any()))
                 .thenReturn(Collections.emptyList());
-        when(prescriptionRepository.findByPatient_Id(eq(patientId), any()))
+        when(prescriptionRepository.findByPatient_IdAndHospital_IdIn(eq(patientId), eq(READABLE), any()))
                 .thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(labOrderRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(labResultRepository.findByLabOrder_Patient_Id(eq(patientId), any())).thenReturn(new PageImpl<>(List.of(labResult)));
-        when(encounterRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
+        when(labOrderRepository.findByPatient_IdAndHospital_IdIn(patientId, READABLE)).thenReturn(Collections.emptyList());
+        when(labResultRepository.findByLabOrder_Patient_IdAndLabOrder_Hospital_IdIn(eq(patientId), eq(READABLE), any())).thenReturn(List.of(labResult));
+        when(encounterRepository.findByPatient_IdAndHospital_IdInOrderByEncounterDateDesc(patientId, READABLE)).thenReturn(Collections.emptyList());
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertEquals(1, result.getLatestLabs().size());
         assertEquals("Lab Test", result.getLatestLabs().get(0).getTest());
@@ -674,15 +687,15 @@ class PatientSnapshotServiceImplTest {
         when(inProgressOrder.getOrderDatetime()).thenReturn(null);
 
         when(patientAllergyRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(patientVitalSignRepository.findByPatient_IdOrderByRecordedAtDesc(eq(patientId), any()))
+        when(patientVitalSignRepository.findByPatient_IdAndHospital_IdInOrderByRecordedAtDesc(eq(patientId), eq(READABLE), any()))
                 .thenReturn(Collections.emptyList());
-        when(prescriptionRepository.findByPatient_Id(eq(patientId), any()))
+        when(prescriptionRepository.findByPatient_IdAndHospital_IdIn(eq(patientId), eq(READABLE), any()))
                 .thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(labOrderRepository.findByPatient_Id(patientId)).thenReturn(List.of(inProgressOrder));
-        when(labResultRepository.findByLabOrder_Patient_Id(eq(patientId), any())).thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(encounterRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
+        when(labOrderRepository.findByPatient_IdAndHospital_IdIn(patientId, READABLE)).thenReturn(List.of(inProgressOrder));
+        when(labResultRepository.findByLabOrder_Patient_IdAndLabOrder_Hospital_IdIn(eq(patientId), eq(READABLE), any())).thenReturn(Collections.emptyList());
+        when(encounterRepository.findByPatient_IdAndHospital_IdInOrderByEncounterDateDesc(patientId, READABLE)).thenReturn(Collections.emptyList());
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertEquals(1, result.getPendingOrders().size());
         assertEquals("Chem Panel", result.getPendingOrders().get(0).getDescription());
@@ -701,15 +714,15 @@ class PatientSnapshotServiceImplTest {
         when(order.getOrderDatetime()).thenReturn(LocalDateTime.of(2026, 3, 14, 8, 0));
 
         when(patientAllergyRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(patientVitalSignRepository.findByPatient_IdOrderByRecordedAtDesc(eq(patientId), any()))
+        when(patientVitalSignRepository.findByPatient_IdAndHospital_IdInOrderByRecordedAtDesc(eq(patientId), eq(READABLE), any()))
                 .thenReturn(Collections.emptyList());
-        when(prescriptionRepository.findByPatient_Id(eq(patientId), any()))
+        when(prescriptionRepository.findByPatient_IdAndHospital_IdIn(eq(patientId), eq(READABLE), any()))
                 .thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(labOrderRepository.findByPatient_Id(patientId)).thenReturn(List.of(order));
-        when(labResultRepository.findByLabOrder_Patient_Id(eq(patientId), any())).thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(encounterRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
+        when(labOrderRepository.findByPatient_IdAndHospital_IdIn(patientId, READABLE)).thenReturn(List.of(order));
+        when(labResultRepository.findByLabOrder_Patient_IdAndLabOrder_Hospital_IdIn(eq(patientId), eq(READABLE), any())).thenReturn(Collections.emptyList());
+        when(encounterRepository.findByPatient_IdAndHospital_IdInOrderByEncounterDateDesc(patientId, READABLE)).thenReturn(Collections.emptyList());
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertEquals(1, result.getPendingOrders().size());
         assertNull(result.getPendingOrders().get(0).getDescription());
@@ -729,15 +742,15 @@ class PatientSnapshotServiceImplTest {
         when(enc.getStaff()).thenReturn(staffMember);
 
         when(patientAllergyRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(patientVitalSignRepository.findByPatient_IdOrderByRecordedAtDesc(eq(patientId), any()))
+        when(patientVitalSignRepository.findByPatient_IdAndHospital_IdInOrderByRecordedAtDesc(eq(patientId), eq(READABLE), any()))
                 .thenReturn(Collections.emptyList());
-        when(prescriptionRepository.findByPatient_Id(eq(patientId), any()))
+        when(prescriptionRepository.findByPatient_IdAndHospital_IdIn(eq(patientId), eq(READABLE), any()))
                 .thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(labOrderRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(labResultRepository.findByLabOrder_Patient_Id(eq(patientId), any())).thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(encounterRepository.findByPatient_Id(patientId)).thenReturn(List.of(enc));
+        when(labOrderRepository.findByPatient_IdAndHospital_IdIn(patientId, READABLE)).thenReturn(Collections.emptyList());
+        when(labResultRepository.findByLabOrder_Patient_IdAndLabOrder_Hospital_IdIn(eq(patientId), eq(READABLE), any())).thenReturn(Collections.emptyList());
+        when(encounterRepository.findByPatient_IdAndHospital_IdInOrderByEncounterDateDesc(patientId, READABLE)).thenReturn(List.of(enc));
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertEquals(1, result.getCareTeam().size());
         // Was the literal "Staff" — an English word the portal cannot translate,
@@ -759,15 +772,15 @@ class PatientSnapshotServiceImplTest {
         when(enc.getStaff()).thenReturn(null);
 
         when(patientAllergyRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(patientVitalSignRepository.findByPatient_IdOrderByRecordedAtDesc(eq(patientId), any()))
+        when(patientVitalSignRepository.findByPatient_IdAndHospital_IdInOrderByRecordedAtDesc(eq(patientId), eq(READABLE), any()))
                 .thenReturn(Collections.emptyList());
-        when(prescriptionRepository.findByPatient_Id(eq(patientId), any()))
+        when(prescriptionRepository.findByPatient_IdAndHospital_IdIn(eq(patientId), eq(READABLE), any()))
                 .thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(labOrderRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(labResultRepository.findByLabOrder_Patient_Id(eq(patientId), any())).thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(encounterRepository.findByPatient_Id(patientId)).thenReturn(List.of(enc));
+        when(labOrderRepository.findByPatient_IdAndHospital_IdIn(patientId, READABLE)).thenReturn(Collections.emptyList());
+        when(labResultRepository.findByLabOrder_Patient_IdAndLabOrder_Hospital_IdIn(eq(patientId), eq(READABLE), any())).thenReturn(Collections.emptyList());
+        when(encounterRepository.findByPatient_IdAndHospital_IdInOrderByEncounterDateDesc(patientId, READABLE)).thenReturn(List.of(enc));
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertTrue(result.getCareTeam().isEmpty());
     }
@@ -780,7 +793,7 @@ class PatientSnapshotServiceImplTest {
         givenPatient(patientId, patient);
         stubEmptySubQueries(patientId);
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertTrue(result.getAllergies().isEmpty());
     }
@@ -793,7 +806,7 @@ class PatientSnapshotServiceImplTest {
         givenPatient(patientId, patient);
         stubEmptySubQueries(patientId);
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertTrue(result.getActiveDiagnoses().isEmpty());
     }
@@ -817,15 +830,15 @@ class PatientSnapshotServiceImplTest {
         when(patientDiagnosisRepository.findByPatient_IdAndStatusOrderByDiagnosedAtDesc(patientId, "ACTIVE"))
                 .thenReturn(List.of(dx));
         when(patientAllergyRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(patientVitalSignRepository.findByPatient_IdOrderByRecordedAtDesc(eq(patientId), any()))
+        when(patientVitalSignRepository.findByPatient_IdAndHospital_IdInOrderByRecordedAtDesc(eq(patientId), eq(READABLE), any()))
                 .thenReturn(Collections.emptyList());
-        when(prescriptionRepository.findByPatient_Id(eq(patientId), any()))
+        when(prescriptionRepository.findByPatient_IdAndHospital_IdIn(eq(patientId), eq(READABLE), any()))
                 .thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(labOrderRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(labResultRepository.findByLabOrder_Patient_Id(eq(patientId), any())).thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(encounterRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
+        when(labOrderRepository.findByPatient_IdAndHospital_IdIn(patientId, READABLE)).thenReturn(Collections.emptyList());
+        when(labResultRepository.findByLabOrder_Patient_IdAndLabOrder_Hospital_IdIn(eq(patientId), eq(READABLE), any())).thenReturn(Collections.emptyList());
+        when(encounterRepository.findByPatient_IdAndHospital_IdInOrderByEncounterDateDesc(patientId, READABLE)).thenReturn(Collections.emptyList());
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertEquals(1, result.getActiveDiagnoses().size());
         assertEquals("E11.9 \u2013 Type 2 Diabetes", result.getActiveDiagnoses().get(0));
@@ -846,25 +859,28 @@ class PatientSnapshotServiceImplTest {
         givenPatient(patientId, patient);
 
         PatientProblem problem = mock(PatientProblem.class);
+        // The scoped read filters ACTIVE itself (the unscoped finder used to do
+        // it in the query), so the row has to carry the status.
+        when(problem.getStatus()).thenReturn(ProblemStatus.ACTIVE);
         when(problem.getProblemCode()).thenReturn("B54");
         when(problem.getProblemDisplay()).thenReturn("Malaria, unspecified");
 
         when(patientProblemRepository
-                .findByPatient_IdAndStatusOrderByCreatedAtDesc(patientId, ProblemStatus.ACTIVE))
+                .findByPatient_IdAndHospital_IdIn(patientId, READABLE))
                 .thenReturn(List.of(problem));
         when(patientDiagnosisRepository.findByPatient_IdAndStatusOrderByDiagnosedAtDesc(patientId, "ACTIVE"))
                 .thenReturn(Collections.emptyList());
         when(patientAllergyRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(patientVitalSignRepository.findByPatient_IdOrderByRecordedAtDesc(eq(patientId), any()))
+        when(patientVitalSignRepository.findByPatient_IdAndHospital_IdInOrderByRecordedAtDesc(eq(patientId), eq(READABLE), any()))
                 .thenReturn(Collections.emptyList());
-        when(prescriptionRepository.findByPatient_Id(eq(patientId), any()))
+        when(prescriptionRepository.findByPatient_IdAndHospital_IdIn(eq(patientId), eq(READABLE), any()))
                 .thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(labOrderRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(labResultRepository.findByLabOrder_Patient_Id(eq(patientId), any()))
-                .thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(encounterRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
+        when(labOrderRepository.findByPatient_IdAndHospital_IdIn(patientId, READABLE)).thenReturn(Collections.emptyList());
+        when(labResultRepository.findByLabOrder_Patient_IdAndLabOrder_Hospital_IdIn(eq(patientId), eq(READABLE), any()))
+                .thenReturn(Collections.emptyList());
+        when(encounterRepository.findByPatient_IdAndHospital_IdInOrderByEncounterDateDesc(patientId, READABLE)).thenReturn(Collections.emptyList());
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertEquals(1, result.getActiveDiagnoses().size());
         assertEquals("B54 \u2013 Malaria, unspecified", result.getActiveDiagnoses().get(0));
@@ -889,15 +905,15 @@ class PatientSnapshotServiceImplTest {
         when(patientDiagnosisRepository.findByPatient_IdAndStatusOrderByDiagnosedAtDesc(patientId, "ACTIVE"))
                 .thenReturn(List.of(dx));
         when(patientAllergyRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(patientVitalSignRepository.findByPatient_IdOrderByRecordedAtDesc(eq(patientId), any()))
+        when(patientVitalSignRepository.findByPatient_IdAndHospital_IdInOrderByRecordedAtDesc(eq(patientId), eq(READABLE), any()))
                 .thenReturn(Collections.emptyList());
-        when(prescriptionRepository.findByPatient_Id(eq(patientId), any()))
+        when(prescriptionRepository.findByPatient_IdAndHospital_IdIn(eq(patientId), eq(READABLE), any()))
                 .thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(labOrderRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(labResultRepository.findByLabOrder_Patient_Id(eq(patientId), any())).thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(encounterRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
+        when(labOrderRepository.findByPatient_IdAndHospital_IdIn(patientId, READABLE)).thenReturn(Collections.emptyList());
+        when(labResultRepository.findByLabOrder_Patient_IdAndLabOrder_Hospital_IdIn(eq(patientId), eq(READABLE), any())).thenReturn(Collections.emptyList());
+        when(encounterRepository.findByPatient_IdAndHospital_IdInOrderByEncounterDateDesc(patientId, READABLE)).thenReturn(Collections.emptyList());
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertEquals(1, result.getActiveDiagnoses().size());
         assertEquals("Hypertension", result.getActiveDiagnoses().get(0));
@@ -920,18 +936,18 @@ class PatientSnapshotServiceImplTest {
         lenient().when(encWithNotes.getEncounterType()).thenReturn(EncounterType.OUTPATIENT);
         lenient().when(encWithNotes.getEncounterDate()).thenReturn(LocalDateTime.of(2026, 3, 14, 10, 0));
 
-        when(encounterRepository.findByPatient_Id(patientId)).thenReturn(List.of(encWithNotes));
+        when(encounterRepository.findByPatient_IdAndHospital_IdInOrderByEncounterDateDesc(patientId, READABLE)).thenReturn(List.of(encWithNotes));
         when(patientAllergyRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(patientVitalSignRepository.findByPatient_IdOrderByRecordedAtDesc(eq(patientId), any()))
+        when(patientVitalSignRepository.findByPatient_IdAndHospital_IdInOrderByRecordedAtDesc(eq(patientId), eq(READABLE), any()))
                 .thenReturn(Collections.emptyList());
-        when(prescriptionRepository.findByPatient_Id(eq(patientId), any()))
+        when(prescriptionRepository.findByPatient_IdAndHospital_IdIn(eq(patientId), eq(READABLE), any()))
                 .thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(labOrderRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(labResultRepository.findByLabOrder_Patient_Id(eq(patientId), any())).thenReturn(new PageImpl<>(Collections.emptyList()));
+        when(labOrderRepository.findByPatient_IdAndHospital_IdIn(patientId, READABLE)).thenReturn(Collections.emptyList());
+        when(labResultRepository.findByLabOrder_Patient_IdAndLabOrder_Hospital_IdIn(eq(patientId), eq(READABLE), any())).thenReturn(Collections.emptyList());
         when(patientDiagnosisRepository.findByPatient_IdAndStatusOrderByDiagnosedAtDesc(patientId, "ACTIVE"))
                 .thenReturn(Collections.emptyList());
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertFalse(result.getRecentNotes().isEmpty());
         assertEquals("Dr. Smith", result.getRecentNotes().get(0).getAuthor());
@@ -953,18 +969,18 @@ class PatientSnapshotServiceImplTest {
         lenient().when(enc.getEncounterType()).thenReturn(null);
         lenient().when(enc.getEncounterDate()).thenReturn(null);
 
-        when(encounterRepository.findByPatient_Id(patientId)).thenReturn(List.of(enc));
+        when(encounterRepository.findByPatient_IdAndHospital_IdInOrderByEncounterDateDesc(patientId, READABLE)).thenReturn(List.of(enc));
         when(patientAllergyRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(patientVitalSignRepository.findByPatient_IdOrderByRecordedAtDesc(eq(patientId), any()))
+        when(patientVitalSignRepository.findByPatient_IdAndHospital_IdInOrderByRecordedAtDesc(eq(patientId), eq(READABLE), any()))
                 .thenReturn(Collections.emptyList());
-        when(prescriptionRepository.findByPatient_Id(eq(patientId), any()))
+        when(prescriptionRepository.findByPatient_IdAndHospital_IdIn(eq(patientId), eq(READABLE), any()))
                 .thenReturn(new PageImpl<>(Collections.emptyList()));
-        when(labOrderRepository.findByPatient_Id(patientId)).thenReturn(Collections.emptyList());
-        when(labResultRepository.findByLabOrder_Patient_Id(eq(patientId), any())).thenReturn(new PageImpl<>(Collections.emptyList()));
+        when(labOrderRepository.findByPatient_IdAndHospital_IdIn(patientId, READABLE)).thenReturn(Collections.emptyList());
+        when(labResultRepository.findByLabOrder_Patient_IdAndLabOrder_Hospital_IdIn(eq(patientId), eq(READABLE), any())).thenReturn(Collections.emptyList());
         when(patientDiagnosisRepository.findByPatient_IdAndStatusOrderByDiagnosedAtDesc(patientId, "ACTIVE"))
                 .thenReturn(Collections.emptyList());
 
-        PatientSnapshotDTO result = service.getSnapshot(patientId, null);
+        PatientSnapshotDTO result = service.getSnapshot(patientId, HOSPITAL_ID);
 
         assertFalse(result.getRecentNotes().isEmpty());
         PatientSnapshotDTO.NoteItem note = result.getRecentNotes().get(0);
@@ -1004,15 +1020,86 @@ class PatientSnapshotServiceImplTest {
                 eq(Map.of(otherHospitalId.toString(), 1L)), anyString());
     }
 
+    // -- No hospital scope: the drawer refuses instead of reading every tenant --
+
+    /**
+     * The whole record of one patient — allergies, diagnoses, medications,
+     * vitals, labs, pending orders, notes, care team — was returned from every
+     * hospital when no scope resolved: each section took a patient-wide branch,
+     * the registration check was skipped, and {@code account()} no-ops on a
+     * null acting hospital so nothing was disclosed. It refuses, and it refuses
+     * BEFORE it reads anything, including the patient row itself.
+     */
     @Test
-    void getSnapshot_withoutAnActingHospital_recordsNoReach() {
+    void noHospitalScopeRefusesInsteadOfReadingEveryTenant() {
+        UUID patientId = UUID.randomUUID();
+        UUID otherHospitalId = UUID.randomUUID();
+        Hospital other = new Hospital();
+        other.setId(otherHospitalId);
+        LabOrder foreignOrder = new LabOrder();
+        foreignOrder.setHospital(other);
+        foreignOrder.setStatus(LabOrderStatus.PENDING);
+        // Stubbed so the test would SEE the leak if a patient-wide branch ever
+        // ran again: this is the very finder #739 abandoned on the lab side.
+        lenient().when(labOrderRepository.findByPatient_Id(patientId)).thenReturn(List.of(foreignOrder));
+        // A bare mock, not stubPatient(): the guard must fire before the patient
+        // row is even loaded, so none of its fields may be needed.
+        lenient().when(patientRepository.findByIdUnscoped(patientId))
+                .thenReturn(Optional.of(mock(Patient.class)));
+
+        // The key, not the resolved message: getMessage() is already resolved,
+        // so only getMessageKey() pins that the refusal is a resolvable key and
+        // is the same answer a missing patient gives (asserted below).
+        org.assertj.core.api.Assertions
+                .assertThatThrownBy(() -> service.getSnapshot(patientId, null))
+                .isInstanceOf(ResourceNotFoundException.class)
+                .extracting(thrown -> ((ResourceNotFoundException) thrown).getMessageKey())
+                .isEqualTo("patient.notFound");
+
+        verify(patientRepository, never()).findByIdUnscoped(any());
+        verify(labOrderRepository, never()).findByPatient_Id(any());
+        verify(recordAccessPolicy, never()).readableHospitalIds(any(), any(), any());
+        org.mockito.Mockito.verifyNoInteractions(reachRecorder);
+    }
+
+    /**
+     * And it is the same answer: a caller who could not establish scope cannot
+     * tell a refusal from "no such patient", so the drawer is not a probe for
+     * which patient ids exist on the platform.
+     */
+    @Test
+    void theRefusalIsIndistinguishableFromAMissingPatient() {
+        UUID patientId = UUID.randomUUID();
+        when(patientRepository.findByIdUnscoped(patientId)).thenReturn(Optional.empty());
+
+        String refusedKey = org.assertj.core.api.Assertions
+                .catchThrowableOfType(() -> service.getSnapshot(patientId, null),
+                        ResourceNotFoundException.class)
+                .getMessageKey();
+        String missingKey = org.assertj.core.api.Assertions
+                .catchThrowableOfType(() -> service.getSnapshot(patientId, HOSPITAL_ID),
+                        ResourceNotFoundException.class)
+                .getMessageKey();
+
+        assertEquals(missingKey, refusedKey);
+        assertEquals("patient.notFound", refusedKey);
+    }
+
+    /**
+     * The disclosure is no longer conditional on anything the caller controls:
+     * a scoped read always records the reach row, even when nothing foreign
+     * surfaced (an empty map is the honest answer, not a skipped row).
+     */
+    @Test
+    void aScopedReadAlwaysRecordsTheReachRow() {
         UUID patientId = UUID.randomUUID();
         Patient patient = stubPatient(patientId);
         givenPatient(patientId, patient);
         stubEmptySubQueries(patientId);
 
-        service.getSnapshot(patientId, null);
+        service.getSnapshot(patientId, HOSPITAL_ID);
 
-        verify(reachRecorder, never()).recordReach(any(), any(), any(), any(), any(), any());
+        verify(reachRecorder).recordReach(eq(patientId), eq(HOSPITAL_ID), any(), isNull(),
+                eq(Map.of()), anyString());
     }
 }
